# vimanam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-crate.yml  release.yml
src/: config.rs  main.rs  markdown.rs  models.rs  parser.rs  utils.rs
src/markdown/: endpoint.rs  examples.rs  mod.rs  schema.rs  views.rs
tests/: cli.rs
tests/fixtures/: examples_oas3.json  missing_responses.json  multi_auth.json  multi_auth_oas2.json  multi_auth_oas3.json  multi_tag_oas3.json  override_param.json  petstore_oas2.yaml  petstore_oas3.yaml  ref_param_and_body.json  ref_parameter.json  ref_path_item.json  ref_request_body_oas3.json  schema_refs_oas3.json  schema_refs_oas3.yaml  type_array_nullable.json  unknown_tag.json
