[package]
name = "vimanam"
version = "0.6.0"
edition = "2021"
rust-version = "1.85"
authors = ["Narayan SS <nrynss@users.noreply.github.com>"]
description = "OpenAPI/Swagger to Markdown documentation generator with grouping, filtering, and detail levels for docs and LLM context"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/noemaforge/vimanam"
homepage = "https://github.com/noemaforge/vimanam"
keywords = ["openapi", "swagger", "markdown", "documentation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Command line argument parsing
clap = { version = "4.6", features = ["derive"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
# preserve_order keeps serde_json::Value object keys in spec order, so the
# OpenAPI 2.0 `securityDefinitions` (read via the extensions map) and `$ref`
# resolution preserve declaration order rather than sorting alphabetically.
serde_json = { version = "1.0", features = ["preserve_order"] }
saneyaml = "0.3"

# Insertion-order-preserving maps for deterministic output
indexmap = { version = "2.14", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
